--- a/src/main/resources/fxml/MyHomePostPage.fxml
+++ b/src/main/resources/fxml/MyHomePostPage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="947.75" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MyHomePostPageController">
+<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="947.75" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MyHomePostPageController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" prefWidth="100.0" />
   </columnConstraints>
@@ -15,7 +15,7 @@
     <RowConstraints minHeight="10.0" percentHeight="86.4" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <GridPane fx:id="down" style="-fx-background-color: gray;" GridPane.rowIndex="1">
+      <GridPane style="-fx-background-color: gray;" GridPane.rowIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -25,7 +25,7 @@
          <children>
             <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0">
                <content>
-                  <VBox prefHeight="778.0" prefWidth="933.0" style="-fx-background-color: blue;" />
+                  <VBox fx:id="down" prefHeight="746.0" prefWidth="929.0" spacing="25.0" style="-fx-background-color: gray;" />
                </content>
             </ScrollPane>
          </children>
