--- a/src/main/resources/fxml/MyMessageBox.fxml
+++ b/src/main/resources/fxml/MyMessageBox.fxml
@@ -8,50 +8,91 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MyMessageBoxController">
+<GridPane fx:id="total" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="85.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MyMessageBoxController">
   <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="60.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="240.0" style="-fx-background-color: #000437; -fx-background-radius: 10;" GridPane.columnIndex="1">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints maxHeight="0.0" minHeight="0.0" percentHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="0.0" minHeight="0.0" percentHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="50.0" minHeight="10.0" percentHeight="14.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="50.0" minHeight="10.0" percentHeight="65.0" prefHeight="50.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" percentHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         </rowConstraints>
+      <GridPane fx:id="messageGrid" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="142.0" prefWidth="240.0" style="-fx-background-color: #000437; -fx-background-radius: 10;" GridPane.columnIndex="1">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" percentHeight="23.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" percentHeight="64.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" percentHeight="13.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <TextArea maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="54.0" prefWidth="241.0" style="-fx-background-color: #000437; -fx-border-color: Red; -fx-border-width: 1;" text="content&#10;nothing&#10;" wrapText="true" GridPane.rowIndex="3">
-               <font>
-                  <Font name="Bell MT" size="12.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="DEFAULT" />
-               </cursor>
-            </TextArea>
-            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="35.0" GridPane.rowIndex="4">
+            <HBox alignment="CENTER_RIGHT" maxHeight="30.0" minHeight="13.6" prefHeight="13.6" prefWidth="200.0" spacing="35.0" GridPane.rowIndex="2">
                <children>
-                  <Label text="Edited" textFill="WHITE" />
-                  <Label text="Date" textFill="WHITE">
+                  <Label fx:id="edited" text="Edited" textFill="WHITE">
+                     <font>
+                        <Font size="9.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="date" maxHeight="50.0" text="Date" textFill="WHITE">
                      <padding>
                         <Insets right="35.0" />
                      </padding>
+                     <font>
+                        <Font size="9.0" />
+                     </font>
                   </Label>
                </children>
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
             </HBox>
+            <TextArea fx:id="ContentTextArea" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="54.0" prefWidth="241.0" style="-fx-background-color: #000437; -fx-border-color: Red;" text="&#10;" wrapText="true" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Bell MT" size="20.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor>
+            </TextArea>
+            <GridPane maxHeight="80.0" prefHeight="0.0" prefWidth="240.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+            <GridPane fx:id="forwardOrReplyGridPane" alignment="CENTER" maxHeight="100.0" minHeight="0.0" minWidth="0.0" prefHeight="40.0" prefWidth="240.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="9.333329105377196" minHeight="6.133337402343749" percentHeight="31.0" prefHeight="9.333329105377196" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="9.333329105377196" minHeight="10.0" percentHeight="69.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <VBox fx:id="vboxForwardOrReply" alignment="CENTER_LEFT" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: Red; -fx-background-radius: 4;" GridPane.rowIndex="1">
+                     <children>
+                        <Label fx:id="forwardOrReplyLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#forwardOrReplyClicked" prefHeight="14.0" prefWidth="404.0" text="Label">
+                           <font>
+                              <Font size="9.0" />
+                           </font>
+                           <padding>
+                              <Insets bottom="1.0" left="10.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </VBox>
+               </children>
+            </GridPane>
          </children>
       </GridPane>
    </children>
