--- a/src/main/resources/fxml/PvsPage.fxml
+++ b/src/main/resources/fxml/PvsPage.fxml
@@ -161,20 +161,20 @@
             </GridPane>
          </children>
       </GridPane>
-      <GridPane GridPane.columnIndex="1">
+      <GridPane fx:id="rightGridPain" GridPane.columnIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" percentHeight="4.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="6.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" percentHeight="77.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" percentHeight="7.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" rotate="180.0" GridPane.rowIndex="2">
+            <ScrollPane fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" rotate="180.0" GridPane.rowIndex="2">
                <content>
-                  <VBox fx:id="reverseVboxForSendMessage" prefHeight="729.0" prefWidth="610.0" spacing="25.0" style="-fx-background-color: #013dc4;" />
+                  <VBox fx:id="reverseVboxForSendMessage" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="729.0" prefWidth="610.0" spacing="25.0" style="-fx-background-color: #013dc4;" />
                </content>
             </ScrollPane>
             <GridPane style="-fx-background-color: #ffb703;">
@@ -291,14 +291,15 @@
                   </GridPane>
                </children>
             </GridPane>
-            <GridPane style="-fx-background-color: #ffb703;" GridPane.rowIndex="3">
+            <GridPane fx:id="messageGridPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" style="-fx-background-color: #ffb703;" GridPane.rowIndex="3">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="80.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" percentHeight="100.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" percentHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
@@ -313,11 +314,6 @@
                         </ImageView>
                      </children>
                   </HBox>
-                  <TextArea fx:id="messageTextArea" prefHeight="26.0" prefWidth="438.0" GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </GridPane.margin>
-                  </TextArea>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <ImageView fitHeight="41.0" fitWidth="83.0" onMouseClicked="#selectPhotoMessage" pickOnBounds="true" preserveRatio="true">
@@ -327,6 +323,18 @@
                         </ImageView>
                      </children>
                   </HBox>
+                  <VBox GridPane.columnIndex="1">
+                     <children>
+                        <TextArea fx:id="messageTextArea" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="500.0" wrapText="true">
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                        </TextArea>
+                     </children>
+                     <GridPane.margin>
+                        <Insets top="5.0" />
+                     </GridPane.margin>
+                  </VBox>
                </children>
             </GridPane>
             <GridPane fx:id="searchInPvGridPane" style="-fx-background-color: #00a8e8;" GridPane.rowIndex="1">
