--- a/src/main/resources/fxml/PvsPage.fxml
+++ b/src/main/resources/fxml/PvsPage.fxml
@@ -25,7 +25,7 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <GridPane style="-fx-background-color: black;">
+      <GridPane fx:id="leftGridPane" style="-fx-background-color: black;">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
